Add GitHub Actions CI

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ci-demo",
   "version": "1.0.0",
   "scripts": {
-    "build": "echo building... && mkdir -p dist && echo build-ok > dist/index.html"
+    "build": "echo building... && mkdir -p dist && echo build-ok > dist/index.html",
+    "test": "echo Running tests... && echo Tests passed!"
   }
 }
