Add standalone build script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ci-demo",
   "version": "1.0.0",
   "scripts": {
-    "build": "mkdir -p dist && cat > dist/index.html << 'EOF'\n<!DOCTYPE html>\n<html lang=\"zh-CN\">\n<head>\n  <meta charset=\"UTF-8\">\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n  <title>CI/CD Demo</title>\n  <style>\n    body { font-family: sans-serif; max-width: 800px; margin: 50px auto; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; }\n    h1 { font-size: 3em; text-align: center; }\n    .badge { background: rgba(255,255,255,0.2); padding: 10px 20px; border-radius: 20px; display: inline-block; margin: 10px; }\n    .success { color: #4ade80; }\n  </style>\n</head>\n<body>\n  <h1>🚀 CI/CD Demo</h1>\n  <div style=\"text-align: center;\">\n    <div class=\"badge\">✅ 构建成功</div>\n    <div class=\"badge\">📦 自动部署</div>\n    <div class=\"badge\">🎉 GitHub Pages</div>\n  </div>\n  <p style=\"text-align: center; margin-top: 50px; font-size: 1.2em;\">\n    构建时间: <span class=\"success\">'$(date)'</span>\n  </p>\n</body>\n</html>\nEOF\n",
+    "build": "bash build.sh",
     "test": "echo Running tests... && echo Tests passed!"
   }
 }
